# hs-to-gallina

./: .gitignore  HsToGallina.cabal  Makefile  README.md  RecursionExample.hs  RunTests  SKI.hs  SimpleExample.hs
docs/: .gitignore
docs/proposal/: Makefile  proposal.lhs
docs/report/: Makefile  report.bib  report.fmt  report.lhs  report.tex
docs/slides/: Makefile  abstract.txt  slides-notes.tex  slides-slides.tex  slides.lhs
examples/: BCExample.hs  CoinductionExample.hs  LetExample.hs  LetPolymorphism.hs  ListTest.hs  MissingCases.hs  Prelude.v  Quicksort.hs  RecursionExample.hs  SKI.hs  SimpleExample.hs  SlideExamples.hs
lib/: Prelude.v
misc/: BC.v  Bad.hs  HaskellReportPrelude.hs  HaskellReportPrelude.txt  Head.v  HsToUUAG.hs  PatExh.hs  TermManip.hs
proposal/: proposal.tex
src/: AG.ag  BoveCapretta.hs  Coinduction.hs  Gallina.hs  HsToGallina.hs
src/AG/: Convert.ag  DataTypes.ag  Declarations.ag  DependencyGraph.ag  Pragmas.ag  Syntax.ag  Terms.ag  TypeSynonyms.ag  Types.ag  Util.ag  Vernacular.ag
src/Gallina/: PrettyPrinting.hs  Syntax.hs
tests/: Coinduction.hs  Log.hs  Notation.hs  PreludeTest.hs  Quicksort.hs  Recursion.hs
