name: HsToGallina
version: 0.0.1
synopsis: Convert Haskell code to Gallina code.
author: Gabe Dijkstra
maintainer: G.Dijkstra@uu.nl
build-type: Simple
cabal-version: >= 1.2
extra-source-files: Makefile
                    , README.md
                    , RunTests
                    , lib/Prelude.v
                    , src/AG.ag
                    , src/AG/DataTypes.ag
                    , src/AG/Declarations.ag
                    , src/AG/DependencyGraph.ag
                    , src/AG/Pragmas.ag
                    , src/AG/Syntax.ag
                    , src/AG/Terms.ag
                    , src/AG/TypeSynonyms.ag
                    , src/AG/Types.ag
                    , src/AG/Util.ag
                    , src/AG/Vernacular.ag
                    , src/BoveCapretta.hs
                    , src/Gallina/PrettyPrinting.hs
                    , src/Gallina/Syntax.hs
                    , src/HsToGallina.hs
                    , src/Coinduction.hs
                    , tests/Coinduction.hs
                    , tests/Log.hs
                    , tests/Notation.hs
                    , tests/PreludeTest.hs
                    , tests/Quicksort.hs
                    , tests/Recursion.hs

executable HsToGallina
  main-is: HsToGallina.hs
  ghc-options: -Wall
  build-depends: base
                 , uuagc
                 , haskell-src-exts < 1.14
                 , containers
                 , pretty
                 , filepath
                 , mtl
  hs-source-dirs: src
